mysite/quiz/static/styles/style.css
body {
    margin: 0;
    font-family: "Arial";
}

.question {
    border-style: none;
    color: black;
    text-align: center;
    text-decoration: none;
    font-size: 48px;
    font-family: "Arial";
    margin: 15px;
    text-align: center;
}

.button {
    background-color: black;
    border-style: solid;
    border-color: black;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 24px;
    border-width: medium;
    font-family: "Arial";
    transition: 0.3s;
}

.button:hover {
    background-color: gray;
    border-color: gray;
    color: white;
}

.card-button {
    background-color: white;
    border-style: none;
    color: black;
    transition: 0.3s;
}

.card-button:hover {
    color: gray;
}

.reverse-button {
    background-color: black;
    border-style: solid;
    border-color: white;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 24px;
    border-width: medium;
    font-family: "Arial";
}

.reverse-button:hover, .reverse-button:focus {
    background-color: white;
    color: black;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  flex-direction: column;
}

.link{
    display: inline-block;
    margin: 2px;
}

.mc-div{
    width: 50%;
}

.mc-button {
    width: 100%;
    margin: 2px;
}

.text-ans{
    width: 75%;
    font-size: 24px;
    padding: 15px;
    background-color: white;
    border-style: solid;
    border-color: black;
    border-width: medium;
    color: black;
    margin: 1px;
}

.text-ans:focus{
    outline: none;
}

.text-submit{
    width: 20%;
}

.full{
    width: 100%;
    height: 90%;
    position: relative;
    text-align: center;
}

.half{
    height: 75%;
    position: relative;
}

.half-width{
    flex: 1;
}

.auto-width{
    width: auto;
}

.page{
    background-color: white;
    color: black;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 24px;
    font-family: "Arial";
}

.pagination{
    width: 100%;
    text-align: center;
    position: absolute;
    bottom: 0;
    margin: 10px;
}

.card{
    background-color: white;
    border-style: solid;
    border-color: black;
    color: black;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 24px;
    border-width: medium;
    font-family: "Arial";
    width: 50%;
    min-height: 50%;
    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.2);
    position: relative;
}

.item{
    display: inline-block;
    text-align:left;
}

.search{
    width: 50%;
    text-align: center;
    position: absolute;
    top: 0;
    margin: 10px;
}

.page-number {
    display: inline-block;
    text-align: right;
    width: 45;
    font-size: 24px;
    padding: 0;
    background-color: white;
    border-style: solid;
    border-color: white;
    border-width: medium;
    color: black;
    margin: 0;
}

.page-number:focus {
    border-color: black;
}

.correct{
    background: linear-gradient(to right, black 50%, green 50%) right;
    background-size: 200% 100%;
    transition: 0.5s;
    color: white;
}

.wrong{
    background: linear-gradient(to right, black 50%, red 50%) right;
    background-size: 200% 100%;
    transition: 0.5s ;
    color: white;
}

.disable{
    pointer-events: none;
}

.text-add {
    background-color: white;
    border-style: none;
    color: black;
    padding: 15px 32px;
    text-decoration: none;
    font-size: 24px;
    font-family: "Arial";
}

.text-disabled {
    background-color: white;
    border-style: solid;
    border-color: white;
    border-width: medium;
    color: black;
    padding: 15px;
    text-decoration: none;
    font-size: 24px;
    font-family: "Arial";
    margin: 1px;
}

.light-text {
    border-style: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 24px;
    font-family: "Arial";
}

.header {
    background-color: black;
    height: 80px;
    width: 100%;
    display: flex;
    align-items: center;
}

.hamburger {
    display: inline-block;
    cursor: pointer;
    text-align: center;
    margin: 12px;
}

    .bar1, .bar2, .bar3 {
        width: 35px;
        height: 3px;
        background-color: white;
        margin: 6px 0;
        transition: 0.4s;
        border-radius: 3px;
    }

    .change .bar1 {
        -webkit-transform: rotate(-45deg) translate(-7px, 6px);
        transform: rotate(-45deg) translate(-7px, 6px);
    }

    .change .bar2 {opacity: 0;}

    .change .bar3 {
        -webkit-transform: rotate(45deg) translate(-7px, -6px);
        transform: rotate(45deg) translate(-7px, -6px);
    }
}

.navbar {
    hidden: true;
}

.sidebar {
    height: 100%;
    width: 0px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: black;
    overflow-x: hidden;
    margin-top: 80px;
    transition: 0.5s;
}

.sidebar-option {
    border-style: none;
    color: white;
    padding: 12px;
    text-align: center;
    text-decoration: none;
    font-size: 24px;
    font-family: "Arial";
    padding: 12px;
    display: block;
    transition: 0.3s;
}

.sidebar-option:hover {
    background-color: gray;
}

.open-sidebar {
    width: 250px;
}

.search-option {
    border: thin;
}

.corner {
    position: absolute;
    margin: 10px;
    right: 0;
    top: 0;
    z-index: 1;
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

